chore: vite setup

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "author": "",
   "scripts": {
     "dev": "vite",
-    "build": "vite build"
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "vite": "7.1.12"
